move "PUT /api/auth/change-password" to "PUT /api/auth/users/self/change-password"
